--- a/src/app/indexer/ops/intel-dialog/intel-dialog.component.html
+++ b/src/app/indexer/ops/intel-dialog/intel-dialog.component.html
@@ -1,6 +1,18 @@
-<a (click)="close()" class="close" style="z-index: 10000"></a>
 
-<div class="intel-wrapper">
-  <app-index-town [world]="world" [id]="id" [key]="team" [embedded]="true"></app-index-town>
-<!--  <app-index-town [world]="'nl92'" [id]="'1028'" [key]="team" [embedded]="true"></app-index-town>-->
+<div class="dialog-header">
+  <a (click)="close()" class="close" style="z-index: 10000;"></a>
 </div>
+
+<ng-container *ngIf="type=='player'">
+  <div class="intel-wrapper-player">
+    <!--<app-index-player [world]="world" [id]="id" [key]="team" [embedded]="true"></app-index-player>-->
+    <app-index-player [world]="'nl108'" [id]="1074596" [key]="'1z7ay7s5'" [embedded]="true"></app-index-player>
+  </div>
+</ng-container>
+
+<ng-container *ngIf="type=='town'">
+  <div class="intel-wrapper-town">
+    <!--  <app-index-town [world]="world" [id]="id" [key]="team" [embedded]="true"></app-index-town>-->
+    <app-index-town [world]="'nl108'" [id]="3331" [key]="'1z7ay7s5'" [embedded]="true"></app-index-town>
+  </div>
+</ng-container>
