--- a/src/app/indexer/alliance/alliance.component.html
+++ b/src/app/indexer/alliance/alliance.component.html
@@ -1,17 +1,17 @@
 <div style="overflow-x: hidden; min-height: 100%;">
 
-	<mat-card [ngClass]="embedded?'embedded-intel-card':'index-card'" style="margin-top: 0 !important;">
+	<mat-card [ngClass]="embedded?'embedded-intel-card':'index-card'">
 		<div [ngClass]="{'embedded-padding': embedded}">
-			<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0; padding: 20px 0 0 !important;" *ngIf="!embedded">
+			<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0; padding: 20px 0 0 !important;" [ngClass]="{ 'embedded-intel': embedded }">
 
-				<h2 style="cursor: pointer; margin: 0;">
+				<h2 style="cursor: pointer; margin: 0;" *ngIf="!embedded">
           <span class="hidden-xs hidden-sm">Showing your combined intel for:&nbsp;</span>
-					<div class="name-circle" (click)="copyBB()">
+					<div class="name-circle">
 						<img style="height: 25px; margin-top: -5px;" src="../../assets/images/ally_ico.png"/>&nbsp;
 						<span class="gd-brown">{{allianceName}}</span>
 					</div>
 				</h2>
-        <br/>
+        <br *ngIf="!embedded" />
         <app-indexer-breadcrumbs [data]="breadcrumb_data"></app-indexer-breadcrumbs>
 
 			</div>
