--- a/src/app/indexer/alliance/alliance.component.scss
+++ b/src/app/indexer/alliance/alliance.component.scss
@@ -17,3 +17,18 @@
   margin: 0 !important;
   padding: 5px !important;
 }
+
+.embedded-intel {
+  margin-bottom: 0 !important;
+  &.card-header {
+    padding: 0 !important;
+  }
+}
+
+.embedded-intel-card {
+  margin-top: 10px !important;
+}
+
+.index-card {
+  margin-top: 0 !important;
+}
