--- a/src/app/indexer/ops/intel-dialog/intel-dialog.component.scss
+++ b/src/app/indexer/ops/intel-dialog/intel-dialog.component.scss
@@ -4,6 +4,17 @@
   font-weight: 900;
 }
 
-.intel-wrapper {
+.intel-wrapper-town {
   margin: -24px;
+  margin-top: -82px;  // 58 + 24
+}
+
+.intel-wrapper-player {
+  margin: -58px 0 0 50px;
+}
+
+.dialog-header {
+  background-color: #f5f5f5;
+  width: 100%;
+  height: 58px;
 }
